tests/slp3_flow_narrow_bad_no_guard.stderr
tests/slp3_flow_narrow_bad_no_guard.sl:184:186: error: type mismatch
